feat: setup terragrunt infra

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ credentials
 .hermit
 .idea
 /config/config.ini
+/infrastructure/terraform.tfstate
+**/.terragrunt-cache
+**/.terraform.lock.hcl
+**/.terraform.tfstate.lock.info
+*.tfstate
+*.tfstate.backup
