--- a/ansible/roles/k3s_server/defaults/main.yml
+++ b/ansible/roles/k3s_server/defaults/main.yml
@@ -2,5 +2,5 @@
 k3s_server_location: "/var/lib/rancher/k3s"
 systemd_dir: "/etc/systemd/system"
 api_port: 6443
-cluster_context: k3s-ansible
+cluster_context: homelab
 kubeconfig: ~/.kube/homelab.config
