--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -16,7 +16,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
+        with:
+          # Number of commits to fetch. 0 indicates all history for all branches and tags.
+          # We need to fetch all history to compare the file changed
+          # TODO: may leverage a GHA to get the changed files?
+          fetch-depth: 0
       # Activate Hermit
       - uses: cashapp/activate-hermit@v1
         with:
