feat: update kustomization

--- a/charts/argocd/kustomization.yaml
+++ b/charts/argocd/kustomization.yaml
@@ -2,17 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-  - name: argocd
+  - name: argo-cd
     repo: https://argoproj.github.io/argo-helm
     releaseName: argocd
     namespace: argocd
     additionalValuesFiles:
-      - values-upstream.yaml
       - values.yaml
-    version: "5.46.8"
-    
-
-resources:
-  - external-secret.yaml
-  - service.yaml
+    version: "6.7.17"
 
