--- a/manifests/infrastructure/1password-connect/namespace.yaml
+++ b/manifests/infrastructure/1password-connect/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: external-secrets
+  name: 1password
   labels:
     app.kubernetes.io/managed-by: ansible
